tests/snapshots/run_wpt_conformance__coreml_tile_int32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tile.https.any.js tile int32 4D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type transpose: Param 'x' has incorrect type for operator 'ios17.transpose'. Expected { tensor<bool, [?, ...]>, tensor<uint16, [?, ...]>, tensor<uint8, [?, ...]>, tensor<int32, [?, ...]>, tensor<int16, [?, ...]>, tensor<fp32, [?, ...]>, tensor<int8, [?, ...]>, tensor<fp16, [?, ...]> }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    tileInput: i32[1, 1, 2, 2];
  }

  nodes {
    [tileOutput] = tile(tileInput, label="");
  }

  outputs { tileOutput; }
}
