tests/snapshots/run_wpt_conformance__coreml_transpose_float32_0D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
transpose.https.any.js transpose float32 0D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type transpose: Param 'x' has incorrect type for operator 'ios17.transpose'. Expected { tensor<bool, [?, ...]>, tensor<uint16, [?, ...]>, tensor<uint8, [?, ...]>, tensor<int32, [?, ...]>, tensor<int16, [?, ...]>, tensor<int8, [?, ...]>, tensor<fp32, [?, ...]>, tensor<fp16, [?, ...]> }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([158, 178, 54, 194]);
  }

  nodes {
    [transposeOutput] = transpose(operand_0, label="", permutation=[]);
  }

  outputs { transposeOutput; }
}
