tests/snapshots/run_wpt_conformance__coreml_transpose_float32_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
transpose.https.any.js transpose float32 1D constant tensor default options, coreml
 WPT worker did not report an outcome (killed by signal 11 (SIGSEGV)); treated as a native crash
