tests/snapshots/run_wpt_conformance__coreml_transpose_float32_2D_tensor_options_permutation.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
transpose.https.any.js transpose float32 2D tensor options.permutation, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'transposeInput' must be of rank 4, instead got a multi-array value of rank 2.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    transposeInput: f32[4, 6];
  }

  nodes {
    [transposeOutput] = transpose(transposeInput, label="", permutation=[1, 0]);
  }

  outputs { transposeOutput; }
}
