tests/snapshots/run_wpt_conformance__coreml_where_float16_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
where.https.any.js where float16 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type select: Param 'cond' has incorrect type for operator 'select'. Expected { tensor<bool, [...]> }; got tensor<uint8, [24]>.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: u8[24] @bytes([241, 0, 85, 0, 227, 51, 202, 0, 104, 227, 129, 129, 175, 134, 130, 140, 103, 46, 158, 17, 0, 41, 94, 0]);
    operand_1: f16[24] @bytes([167, 85, 44, 84, 250, 208, 108, 205, 54, 212, 207, 209, 253, 210, 25, 84, 101, 80, 251, 73, 202, 84, 152, 83, 223, 213, 153, 207, 74, 80, 181, 71, 36, 213, 178, 85, 188, 77, 176, 84, 184, 76, 202, 83, 28, 82, 183, 212]);
    operand_2: f16[24] @bytes([100, 84, 160, 85, 36, 190, 60, 213, 102, 79, 163, 208, 170, 198, 50, 213, 168, 213, 175, 209, 76, 82, 208, 81, 240, 81, 125, 205, 93, 81, 205, 212, 48, 84, 3, 81, 69, 207, 24, 202, 110, 201, 211, 205, 182, 79, 90, 211]);
  }

  nodes {
    [whereOutput] = where(operand_0, operand_2, operand_1, label="");
  }

  outputs { whereOutput; }
}
